# serializer version: 1
# name: test_SeemoRe_T_X2
  ImageModelDescriptor(
    architecture=SeemoReArch(
      id='SeemoRe',
      name='SeemoRe',
    ),
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=2,
    size_requirements=SizeRequirements(minimum=16, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      'Tiny',
      '36dim',
      '3ne',
      '6nl',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_SeemoRe_T_X4
  ImageModelDescriptor(
    architecture=SeemoReArch(
      id='SeemoRe',
      name='SeemoRe',
    ),
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=4,
    size_requirements=SizeRequirements(minimum=16, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      'Tiny',
      '36dim',
      '3ne',
      '6nl',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
